crates/ra_ide_api/src/completion/snapshots/completion_item__mod_with_docs.snap
---
created: "2019-05-23T22:23:35.093689514Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "my",
        source_range: [23; 25),
        delete: [23; 25),
        insert: "my",
        kind: Module,
        documentation: Documentation(
            "Some simple\ndocs describing `mod my`.",
        ),
    },
]
