crates/ra_ide_api/src/completion/snapshots/completion_item__module_items.snap
---
created: "2019-05-23T22:23:35.133106898Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Baz",
        source_range: [89; 89),
        delete: [89; 89),
        insert: "Baz",
        kind: Enum,
    },
    CompletionItem {
        label: "Foo",
        source_range: [89; 89),
        delete: [89; 89),
        insert: "Foo",
        kind: Struct,
    },
    CompletionItem {
        label: "quux",
        source_range: [89; 89),
        delete: [89; 89),
        insert: "quux()$0",
        kind: Function,
        detail: "fn quux()",
    },
]
