crates/ra_ide_api/src/completion/snapshots/completion_item__module_items_in_nested_modules.snap
---
created: "2019-05-23T22:23:35.134417551Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Bar",
        source_range: [101; 101),
        delete: [101; 101),
        insert: "Bar",
        kind: Struct,
    },
    CompletionItem {
        label: "quux",
        source_range: [101; 101),
        delete: [101; 101),
        insert: "quux()$0",
        kind: Function,
        detail: "fn quux()",
    },
]
