crates/ra_ide_api/src/completion/snapshots/completion_item__no_semi_after_break_continue_in_expr.snap
---
created: "2019-05-23T22:23:35.085365816Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "break",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "break",
        kind: Keyword,
    },
    CompletionItem {
        label: "continue",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "continue",
        kind: Keyword,
    },
    CompletionItem {
        label: "if",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "return",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [106; 108),
        delete: [106; 108),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
