crates/ra_ide_api/src/completion/snapshots/completion_item__param_completion_trait_param.snap
---
created: "2019-02-18T09:22:23.974417169Z"
creator: insta@0.6.2
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "file_id: FileId",
        source_range: [269; 273),
        delete: [269; 273),
        insert: "file_id: FileId",
        lookup: "file_id"
    }
]
