crates/ra_ide_api/src/completion/snapshots/completion_item__postfix_completion_works_for_trivial_path_expression.snap
---
created: "2019-04-22T07:37:13.981826301Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "dbg",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "dbg!(bar)",
        detail: "dbg!(expr)"
    },
    CompletionItem {
        label: "if",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "if bar {$0}",
        detail: "if expr {}"
    },
    CompletionItem {
        label: "match",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "match bar {\n    ${1:_} => {$0\\},\n}",
        detail: "match expr {}"
    },
    CompletionItem {
        label: "not",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "!bar",
        detail: "!expr"
    },
    CompletionItem {
        label: "ref",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "&bar",
        detail: "&expr"
    },
    CompletionItem {
        label: "refm",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "&mut bar",
        detail: "&mut expr"
    },
    CompletionItem {
        label: "while",
        source_range: [76; 76),
        delete: [72; 76),
        insert: "while bar {\n$0\n}",
        detail: "while expr {}"
    }
]
