crates/ra_ide_api/src/completion/snapshots/completion_item__return_type.snap
---
created: "2019-04-04T14:52:24.525395600Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Foo",
        source_range: [47; 47),
        delete: [47; 47),
        insert: "Foo",
        kind: Struct
    },
    CompletionItem {
        label: "x",
        source_range: [47; 47),
        delete: [47; 47),
        insert: "x()$0",
        kind: Function,
        detail: "fn x()"
    }
]
