crates/ra_ide_api/src/completion/snapshots/completion_item__snippets_in_expressions.snap
---
created: "2019-05-23T22:23:35.141901047Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "pd",
        source_range: [17; 17),
        delete: [17; 17),
        insert: "eprintln!(\"$0 = {:?}\", $0);",
        kind: Snippet,
    },
    CompletionItem {
        label: "ppd",
        source_range: [17; 17),
        delete: [17; 17),
        insert: "eprintln!(\"$0 = {:#?}\", $0);",
        kind: Snippet,
    },
]
