crates/ra_ide_api/src/completion/snapshots/completion_item__snippets_in_items.snap
---
created: "2019-05-23T22:23:35.149234118Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Test function",
        source_range: [66; 66),
        delete: [66; 66),
        insert: "#[test]\nfn ${1:feature}() {\n    $0\n}",
        kind: Snippet,
        lookup: "tfn",
    },
    CompletionItem {
        label: "pub(crate)",
        source_range: [66; 66),
        delete: [66; 66),
        insert: "pub(crate) $0",
        kind: Snippet,
    },
]
